# technical-analysis-mcp

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/models/: __init__.py
src/server/: __init__.py  mcp_server.py
src/technical_analysis_mcp/: __init__.py  instructions.py  server.py
src/technical_analysis_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/technical_analysis_mcp/helpers/: __init__.py
src/technical_analysis_mcp/models/: __init__.py  asset_price_history.py  data_point.py  error.py  interval.py  period.py  price.py  price_source.py  ticker_information.py  time_series.py
src/technical_analysis_mcp/repl/: __init__.py  repl.py
src/technical_analysis_mcp/server/: __init__.py  instructions.py  server.py
src/technical_analysis_mcp/tools/: __init__.py  compute_rsi.py  compute_sma.py  fetch_asset_price_history.py  fetch_ticker_info.py  fetch_ticker_information.py
src/technical_analysis_mcp/utils/: __init__.py  parsing.py
src/tools/: __init__.py  lookup_tool.py
tests/: __init__.py  test_fetch_ticker_information.py  test_lookup_tool.py  test_mcp_server.py  test_server.py
tests/helpers/: test_parsing.py
tests/models/: __init__.py  test_ticker_information.py
tests/repl/: __init__.py  test_repl.py
tests/server/: __init__.py  test_server.py
tests/tools/: __init__.py  test_compute_rsi.py  test_compute_sma.py  test_fetch_asset_price_history.py  test_fetch_ticker_information.py
tests/utils/: __init__.py  test_parsing.py
